--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cnl2-decrypt",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "node.js module to decrypt click'n'load 2 links",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
